# proj-chartist-scraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: __init__.py  color_extractor.py  deprecated_scrapers.py  scrapers.py
src/auth/: __init__.py  gcp_auth.py
src/config/: env.py
src/connection/: __init__.py  bigquery.py  cloud_storage.py  gsheets.py  slack.py
src/scrapers/: __init__.py  base_scraper.py  scraper.py  vibe_api.py  vibe_scraper.py  youtube_api.py  youtube_scraper.py
